proxy-kubernetes/argocd/apps/seichi-debug-gateway/bungeecord/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bungeecord
    env: debug
  name: bungeecord
  namespace: seichi-debug-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bungeecord
      env: debug
  template:
    metadata:
      labels:
        app: bungeecord
        env: debug
    spec:
      containers:
      - command:
        - sh
        - -c
        - eval "echo \"$(cat /plugins/RedisBungee/config.yml)\"" > /plugins/RedisBungee/config.yml;
          /usr/bin/run-bungeecord.sh
        image: gcr.io/manifest-shell-237511/seichi-debug-gw-bungeecord:latest
        name: bungeecord
        ports:
        - containerPort: 25577
          name: minecraft
        readinessProbe:
          failureThreshold: 2
          initialDelaySeconds: 15
          periodSeconds: 5
          successThreshold: 2
          tcpSocket:
            port: 25577
          timeoutSeconds: 1
        resources:
          requests:
            memory: 768Mi
      imagePullSecrets:
      - name: seichi-network-gcr-private-image
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bungeecord--allow-egress-cloudflared
  namespace: seichi-debug-gateway
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          appgroup: cloudflared
          env: debug
  podSelector:
    matchLabels:
      app: bungeecord
      env: debug
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bungeecord--allow-egress-dns
  namespace: seichi-debug-gateway
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app: bungeecord
      env: debug
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bungeecord--allow-egress-www
  namespace: seichi-debug-gateway
spec:
  egress:
  - ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app: bungeecord
      env: debug
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bungeecord--default-deny-egress-all
  namespace: seichi-debug-gateway
spec:
  podSelector:
    matchLabels:
      app: bungeecord
      env: debug
  policyTypes:
  - Egress
